Introduce manual token initate req.
